--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 html {
   background-color: #fdf6e3;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 header, footer {
@@ -41,6 +46,7 @@ a {
 [rel="external"] {
   background-color: #2694d8;
 }
+
 ol li:first-child {
   color: #719e47;
 }
